Bug 368415 - if you only download message headers, mails which are recognised as junk (spam) lose their "junk" status if you download their content [r/sr/a=bienvenu]